--- a/kirsteldelapaz.html
+++ b/kirsteldelapaz.html
@@ -76,7 +76,7 @@
         </div>
         <div class="col-md-6 text-left">
           <div class="about-text">
-            <p>Hello, everyone! I studying Information Technology at the University of Santo Tomas.</p>
+            <p>Hello, everyone! I am studying Information Technology at the University of Santo Tomas.</p>
             <p>I blog about my personal life including my precious moments, family, friends, and lots of memories.</p>
             <p>&nbsp;</p>
 			<p>&nbsp;</p>
